@@ -21,12 +21,7 @@ if ((! file_exists("include/config.php")) || (! is_readable("include/config.php"
 require_once ('include/config.php');
 require_once ('include/functions.php');
 require_once ('include/functions_db.php');
-
-if (!isset ($config["auth"])) {
-	require_once ("include/auth/mysql.php");
-} else {
-	require_once ("include/auth/".$config["auth"]["scheme"].".php");
-}
+require_once ('include/auth/mysql.php');
 
 // Real start
 session_start ();
