@@ -32,7 +32,7 @@ Requires:           php >= 4.3.0
 Requires:           php5-gd, php5-snmp, php5-pear, php5-json, php5-gettext
 Requires:           php5-mysql, php5-ldap, php5-mbstring, php5
 Requires:           graphviz, xorg-x11-fonts-core
-Requires:           php5-pear-db php-pear-xml_rpc
+Requires:           php5-pear-db, php-pear-xml_rpc
 Provides:           %{name}-%{version}
 
 %description
